fixed word wraps

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,12 +48,13 @@ ul, ol {
   @media (max-width: 575px) {
     max-width: calc(1280px + 15px + 15px);
     padding: 0 15px;
-    
+
   }
 }
 
 .main-content {
   margin-top: 42px;
+  overflow-x: hidden;
 }
 
 .text-primary {
@@ -64,7 +65,7 @@ ul, ol {
 .imprint {
   color: var(--grey);
   font-size: var(--text-4-font-size);
-  word-break: break-all;
+  /* word-break: break-all; */
   h2 {
     font-size: var(--header-2-font-size);
     margin-top: 30px;
@@ -82,7 +83,7 @@ ul, ol {
     font-weight: 400;
   }
   a {
-    word-break: break-all;
+    /* word-break: break-all; */
   }
   ol > li {
     margin-left: 16px;
@@ -98,7 +99,7 @@ ul, ol {
       top: calc(50% - 1px);
       left: 0;
       transform: translateY(-50%);
-      
+
     }
   }
   a {
